--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@workos-inc/authkit-nextjs": "^0.10.1",
+    "@workos-inc/node": "^7.27.2",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
