--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@edgestore/react": "^0.2.2",
+    "@edgestore/server": "^0.2.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
@@ -17,12 +19,18 @@
     "@radix-ui/themes": "^3.1.4",
     "@workos-inc/authkit-nextjs": "^0.10.1",
     "@workos-inc/node": "^7.27.2",
+    "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
+    "multer": "1.4.5-lts.1",
     "next": "14.2.8",
+    "next-cloudinary": "^6.14.2",
     "react": "^18",
     "react-country-state-city": "^1.1.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
