--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@workos-inc/node": "^7.27.2",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
+    "mongoose": "^8.7.1",
     "multer": "1.4.5-lts.1",
     "next": "14.2.8",
     "next-cloudinary": "^6.14.2",
