--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18",
     "react-country-state-city": "^1.1.3",
     "react-dom": "^18",
+    "react-timeago": "^7.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
